--- a/bookGraph/package.json
+++ b/bookGraph/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.17.0"
+    "apollo-server": "^2.17.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.4",
+    "mongoose-unique-validator": "^2.0.3",
+    "nodemon": "^2.0.4"
   }
 }
