--- a/library-frontend/package.json
+++ b/library-frontend/package.json
@@ -31,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "apollo-link-context": "^1.0.20"
   }
 }
